--- a/positionstyles.css
+++ b/positionstyles.css
@@ -41,7 +41,8 @@
 .content2 {
   /* This is the parent of the activity 2 boxes. */
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 50px 50px 50px 50px 50px;
+  grid-template-rows: 50px 50px 50px 50px 50px;
   padding:5px;
 }
 .red2 {
@@ -55,31 +56,31 @@
   width: 100px; 
   height: 100px; 
   background-color: green; 
-  grid-column: 2/2;
-  grid-row: 2/2;
-  margin: -50px 300px 50px -210px;
+  grid-column: 2/4;
+  grid-row:2/4;
+ 
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
   background-color: gold;
-  grid-column: 3/ 3;
-  grid-row: 3/ 3;
-  margin: -110px -230px 0px -430px;  
+  grid-column:3/5;
+  grid-row: 3/5; 
 } 
+
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue;
-  grid-column: 4/ 4;
-  grid-row: 4/ 4; 
-  margin: -60px -200px 20px -640px;
+  grid-column: 4/6;
+  grid-row: 4/6;
 } 
+
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
   display: grid;
-  grid-template-columns: 7fqr 1fr 7fr ;
+  grid-template-columns: 7fr 1fr 7fr;
   grid-column-gap: 20px ;
 }
 .red3 {
@@ -116,24 +117,29 @@
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-template-rows: 100px 100px 100px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: auto; 
   background-color: red; 
+  grid-row-start: 1;
+  grid-row-end: 4;
 } 
 .green4 {
-  width: 100px; 
+  width: 200px; 
   height: 100px; 
   background-color: green; 
 } 
 .yellow4 {
-  width: 100px; 
+  width: 200px; 
   height: 100px; 
   background-color: gold; 
 } 
 .blue4 {
-  width: 100px; 
+  width: 200px; 
   height: 100px; 
   background-color: blue; 
 } 
@@ -141,52 +147,74 @@
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
+  
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  
 } 
 .green5 { 
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  float:left;
+ 
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: auto; 
+  height: 300px; 
   background-color: gold; 
+ 
 
 } 
 .blue5 {
-  width: 100px; 
+  width: auto; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display:grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px ;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px ;
+  
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: auto; 
+  height: auto; 
   background-color: red; 
+  grid-column-start:1;
+  grid-column-end:5;
+  grid-row-start:1;
+  grid-row-end:3;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
+  grid-column: 1/3;
+  grid-row: 5/7;
+  z-index:2;
+  
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
+  grid-column: 5/7;
+  grid-row: 3/7;
+  z-index:2;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: blue; 
+  grid-column:2/6;
+  grid-row:2/6;
 } 
 
 
