--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@200&family=Bungee+Inline&display=swap');
 
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
 #logo_link{
-    padding-top: 500px;
+    padding-top: 10px;
+    justify-self: center;
+    align-self: center;
 }
 
 
@@ -11,23 +18,47 @@
     
 }
 
+nav{
+    display: flex;
+    justify-content: space-around;
+
+}
 nav a{
     text-align: center;
     color:rgb(99, 154, 99);
     text-decoration: none;
     padding:35px;
+    font-size: 1.5em;
 }
 
 #hero{
     text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
 }
+#hero-box{
+    grid-column:1/4;
+    grid-row: 1/3;
+    z-index:-1;
+}
+
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 
 #hero-msg h1{
     text-align: center;
+    color:#d9c2a3;
 }
 
 #hero-msg h4{
     text-align: center;
+    color:white;
+    font-size: 25px;
 }
 
 .button-box{
@@ -44,6 +75,8 @@ main section img{
 
 #background{
     height: 725px;
+    grid-column:1/11;
+    grid-row:4/9;
 }
 
 body{
@@ -58,6 +91,8 @@ h2{
 }
 
 header{
+    display:grid;
+    grid-template-columns: 150px auto;
     background-color: #bdd5ea;
 }
 
@@ -101,14 +136,20 @@ nav a:hover{
 }
 
 .msg{
-    background-color:#bdd5ea ;
+    background-color:rgb(99, 154, 99);
     padding: 35px;
+    grid-column:6/10;
+    grid-row:6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 footer{
     background-color: #bdd5ea;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
 }
 
 .home-title{
@@ -122,13 +163,13 @@ footer{
 }
 
 .msg h2{
-    color:aqua;
-    font-family: "Bungee Inline"
+    color:#d9c2a3;
+    font-family: "Bungee Inline";
 }
 
 .msg p{
-    color:rgb(13, 0, 255);
-    font-size: .8em;
+    color:#d9c2a3;
+    font-size: 1.5em;
     padding-bottom: 15px;
 }
 
@@ -172,16 +213,38 @@ footer .social img{
 
 .rivers-card{
     margin:200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
 }
 
 .camping-card{
     margin:200px 0;
+    grid-column:5/7;
+    grid-row:2/3;
 }
 
 .rapids-card{
     margin: 200px 0;
+    grid-column:8/10;
+    grid-row:2/3;
+
 }
 
 .card-img{
     border:10px solid #d9c2a3;
+    width:100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.mountains{
+    width:100%;
+    grid-column:2/7;
+    grid-row:5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
