--- a/rollwithme/styles/site-plan.css
+++ b/rollwithme/styles/site-plan.css
@@ -5,8 +5,8 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #606C38  ;
-  --secondary-color: #445128 ;
+  --primary-color:#ABD2FA  ;
+  --secondary-color: #DADADA ;
   --accent1-color: #FEFAE0;
   --accent2-color: #DDA15E;
 
