--- a/rollwithme/styles/site-plan.css
+++ b/rollwithme/styles/site-plan.css
@@ -7,7 +7,7 @@ Fonts are separated by a | */
   /* change the values below to your colors from your palette */
   --primary-color:#ABD2FA  ;
   --secondary-color: #DADADA ;
-  --accent1-color: #FEFAE0;
+  --accent1-color:#696969;
   --accent2-color: #DDA15E;
 
   /* change the values below to your chosen font(s) */
