--- a/rollwithme/styles/styles.css
+++ b/rollwithme/styles/styles.css
@@ -41,8 +41,59 @@ nav a{
     margin-top: 40px;
 }
 
+
+main{
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+
 #hero-image{
     width:100%;
+}
+
+#text-box1{
+    font-size: 100px;
+    z-index: 2;
+}
+
+#text-box2{
+    font-size: 100px;
+    z-index: 2;
+}
+
+#text-box3{
+    font-size: 100px;
+    z-index: 2;
+}
+
+
+.comp-background, #text-box1{
+    width:100%;
+    height: 100%;
+    grid-column: 1/2;
+    grid-row:1/2;
+    opacity: .5;
+    transform: scale(1.0)
+}
+
+.friend-background, #text-box2{
+    width:100%;
+    height: 100%;
+    grid-column: 1/2;
+    grid-row:2/3;
+    opacity: .5;
+    transform: scale(1.0)
+}
+
+.teach-background, #text-box3{
+    width:100%;
+    height: 100%;
+    grid-column: 1/2;
+    grid-row:3/4;
+    opacity: .5;
+    transform: scale(1.0)
 }
 
 footer{
